cabal-version: 1.12

name:           winery
version:        1.1.2
synopsis:       A compact, well-typed seralisation format for Haskell values
description:
  <<https://i.imgur.com/lTosHnE.png>>
  .
  Please see the README on GitHub at <https://github.com/fumieval/winery#readme>
category:       Data, Codec, Parsing, Serialization
homepage:       https://github.com/fumieval/winery#readme
bug-reports:    https://github.com/fumieval/winery/issues
author:         Fumiaki Kinoshita
maintainer:     fumiexcel@gmail.com
copyright:      Copyright (c) 2019 Fumiaki Kinoshita
license:        BSD3
license-file:   LICENSE
tested-with:    GHC == 8.4.4, GHC == 8.6.3
build-type:     Simple
extra-source-files:
  README.md
  ChangeLog.md
  .travis.yml
  art/logo.png
  art/logo.svg

source-repository head
  type: git
  location: https://github.com/fumieval/winery

library
  exposed-modules:
      Codec.Winery
      Codec.Winery.Base
      Codec.Winery.Class
      Codec.Winery.Internal
      Codec.Winery.Query
      Codec.Winery.Query.Parser
      Codec.Winery.Test
      Data.Winery
      Data.Winery.Test
  other-modules:
      Paths_winery
  hs-source-dirs:
      src
  ghc-options: -Wall -O2 -Wcompat
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , containers
    , cpu
    , fast-builder
    , hashable
    , HUnit
    , megaparsec >=6.0.0
    , mtl
    , prettyprinter
    , prettyprinter-ansi-terminal
    , scientific
    , semigroups
    , text
    , time
    , transformers
    , unordered-containers
    , vector
    , QuickCheck
  default-language: Haskell2010

executable winery
  main-is: Main.hs
  other-modules:
      Paths_winery
  hs-source-dirs:
      app
  ghc-options: -Wall -O2 -Wcompat
  build-depends:
      aeson
    , base >=4.7 && <5
    , winery
    , megaparsec
    , text
    , prettyprinter
    , prettyprinter-ansi-terminal
    , bytestring
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  ghc-options: -Wall -Wcompat
  other-modules:
      Paths_winery
  hs-source-dirs:
      test
  build-depends:
      QuickCheck
    , base >=4.7 && <5
    , quickcheck-instances
    , winery
    , vector
    , unordered-containers
    , fast-builder
    , time
    , text
    , containers
    , scientific
    , bytestring
  default-language: Haskell2010

benchmark bench-winery
  type: exitcode-stdio-1.0
  main-is: bench.hs
  other-modules:
      Paths_winery
  hs-source-dirs:
      benchmarks
  ghc-options: -O2 -Wall -Wcompat
  build-depends:
      base >=4.7 && <5
    , gauge
    , aeson
    , cereal
    , winery
    , binary
    , serialise
    , store
    , text
    , bytestring
    , deepseq
    , directory
  default-language: Haskell2010
