cabal-version:  2.0
name:           winery
version:        1.4
synopsis:       A compact, well-typed seralisation format for Haskell values
description:
  <<https://i.imgur.com/lTosHnE.png>>
  .
  Please see the README on GitHub at <https://github.com/fumieval/winery#readme>
category:       Data, Codec, Parsing, Serialization
homepage:       https://github.com/fumieval/winery#readme
bug-reports:    https://github.com/fumieval/winery/issues
author:         Fumiaki Kinoshita
maintainer:     fumiexcel@gmail.com
copyright:      Copyright (c) 2020 Fumiaki Kinoshita
license:        BSD3
license-file:   LICENSE
tested-with:    GHC == 8.4.4, GHC == 8.6.4, GHC ==8.8.3, GHC ==8.10.2
build-type:     Simple
extra-source-files:
  README.md
  ChangeLog.md
  art/logo.png
  art/logo.svg

source-repository head
  type: git
  location: https://github.com/fumieval/winery

library
  exposed-modules:
      Codec.Winery
      Codec.Winery.Base
      Codec.Winery.Class
      Codec.Winery.Internal
      Codec.Winery.Query
      Codec.Winery.Query.Parser
      Codec.Winery.Test
  hs-source-dirs:
      src
  ghc-options: -Wall -O2 -Wcompat
  build-depends:
      aeson
    , base >=4.7 && <5
    , barbies ^>= 2.0
    , barbies-th ^>= 0.1
    , bytestring
    , containers
    , cpu
    , fast-builder
    , hashable
    , HUnit
    , megaparsec >=7.0.0
    , mtl
    , prettyprinter ^>= 1.7
    , prettyprinter-ansi-terminal
    , scientific
    , semigroups
    , text
    , time
    , transformers
    , unordered-containers
    , vector
    , QuickCheck
  default-language: Haskell2010

executable winery
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -Wall -O2 -Wcompat
  build-depends:
      aeson
    , base >=4.7 && <5
    , winery
    , megaparsec
    , text
    , prettyprinter
    , prettyprinter-ansi-terminal
    , bytestring
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  ghc-options: -Wall -Wcompat
  hs-source-dirs:
      test
  build-depends:
      QuickCheck
    , base >=4.7 && <5
    , quickcheck-instances
    , winery
    , vector
    , unordered-containers
    , fast-builder
    , time
    , text
    , containers
    , scientific
    , bytestring
    , barbies
    , barbies-th >= 0.1.5
  default-language: Haskell2010

test-suite schema
  type: exitcode-stdio-1.0
  main-is: Schema.hs
  ghc-options: -Wall -Wcompat
  hs-source-dirs:
      test
  build-depends:
    base >=4.7 && <5
    , winery
    , prettyprinter
    , QuickCheck
  default-language: Haskell2010

benchmark bench-winery
  type: exitcode-stdio-1.0
  main-is: bench.hs
  hs-source-dirs:
      benchmarks
  ghc-options: -O2 -Wall -Wcompat
  build-depends:
      base >=4.7 && <5
    , gauge
    , aeson
    , cereal
    , winery
    , binary
    , serialise
    , store
    , text
    , bytestring
    , deepseq
    , directory
    , vector
  default-language: Haskell2010
